--- a/host/kernel/lts2019-chromium/x86_64_defconfig
+++ b/host/kernel/lts2019-chromium/x86_64_defconfig
@@ -696,7 +696,6 @@ CONFIG_UEFI_CPER=y
 CONFIG_UEFI_CPER_X86=y
 CONFIG_EFI_DEV_PATH_PARSER=y
 CONFIG_EFI_EARLYCON=y
-CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 
 #
 # Tegra firmware driver
@@ -1849,6 +1848,8 @@ CONFIG_BT_6LOWPAN=m
 CONFIG_BT_LEDS=y
 # CONFIG_BT_SELFTEST is not set
 CONFIG_BT_DEBUGFS=y
+CONFIG_BT_ENFORCE_CLASSIC_SECURITY=y
+# CONFIG_BT_EVE_HACKS is not set
 
 #
 # Bluetooth device drivers
@@ -1862,7 +1863,6 @@ CONFIG_BT_HCIBTUSB_AUTOSUSPEND=y
 CONFIG_BT_HCIBTUSB_BCM=y
 # CONFIG_BT_HCIBTUSB_MTK is not set
 CONFIG_BT_HCIBTUSB_RTL=y
-# CONFIG_BT_HCIBTUSB_INTERVAL is not set
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_SERDEV=y
@@ -2545,6 +2545,7 @@ CONFIG_SCSI_PROC_FS=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_ST=m
 CONFIG_BLK_DEV_SR=y
+# CONFIG_BLK_DEV_SR_VENDOR is not set
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=m
 CONFIG_SCSI_ENCLOSURE=m
@@ -5755,7 +5756,6 @@ CONFIG_VIDEO_OV7670=m
 # CONFIG_VIDEO_OV9640 is not set
 # CONFIG_VIDEO_OV9650 is not set
 # CONFIG_VIDEO_OV13858 is not set
-# CONFIG_VIDEO_OV2740 is not set
 # CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_MT9M001 is not set
 # CONFIG_VIDEO_MT9M032 is not set
@@ -6154,10 +6154,6 @@ CONFIG_DRM_I915_GVT_KVMGT=m
 #
 CONFIG_DRM_I915_USERFAULT_AUTOSUSPEND=250
 CONFIG_DRM_I915_SPIN_REQUEST=5
-CONFIG_DRM_I915_HEARTBEAT_INTERVAL=2500
-CONFIG_DRM_I915_PREEMPT_TIMEOUT=640
-CONFIG_DRM_I915_STOP_TIMEOUT=100
-CONFIG_DRM_I915_TIMESLICE_DURATION=1
 # end of drm/i915 Profile Guided Optimisation
 
 CONFIG_DRM_VGEM=m
@@ -6191,6 +6187,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # Display Interface Bridges
 #
 CONFIG_DRM_ANALOGIX_ANX78XX=m
+# CONFIG_ANALOGIX_ANX7625 is not set
 # end of Display Interface Bridges
 
 # CONFIG_DRM_ETNAVIV is not set
@@ -6681,7 +6678,6 @@ CONFIG_SND_SOC_INTEL_KBL_RT5660_MACH=m
 CONFIG_SND_SOC_INTEL_GLK_RT5682_MAX98357A_MACH=m
 CONFIG_SND_SOC_INTEL_SKL_HDA_DSP_GENERIC_MACH=m
 CONFIG_SND_SOC_INTEL_SOF_CML_RT1011_RT5682_MACH=m
-# CONFIG_SND_SOC_INTEL_USER_FRIENDLY_LONG_NAMES is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_PCI=m
@@ -6693,7 +6689,6 @@ CONFIG_SND_SOC_SOF_INTEL_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_INTEL_ACPI=m
 CONFIG_SND_SOC_SOF_INTEL_PCI=m
 CONFIG_SND_SOC_SOF_INTEL_COMMON=m
-CONFIG_SND_SOC_SOF_INTEL_SOUNDWIRE_LINK_BASELINE=m
 # CONFIG_SND_SOC_SOF_MERRIFIELD_SUPPORT is not set
 CONFIG_SND_SOC_SOF_APOLLOLAKE_SUPPORT=y
 CONFIG_SND_SOC_SOF_APOLLOLAKE=m
@@ -8283,7 +8278,6 @@ CONFIG_THINKPAD_ACPI_DEBUGFACILITIES=y
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 CONFIG_SENSORS_HDAPS=m
-# CONFIG_INTEL_IOM is not set
 CONFIG_INTEL_MENLOW=m
 CONFIG_EEEPC_LAPTOP=m
 CONFIG_ASUS_WMI=m
@@ -8977,7 +8971,6 @@ CONFIG_LIDAR_LITE_V2=m
 # CONFIG_MB1232 is not set
 CONFIG_RFD77402=m
 CONFIG_SRF04=m
-# CONFIG_SX9310 is not set
 CONFIG_SX9500=m
 CONFIG_SRF08=m
 # CONFIG_VL53L0X_I2C is not set
@@ -10119,7 +10112,6 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
-CONFIG_SCHED_CORE=y
 # CONFIG_DEBUG_TIMEKEEPING is not set
 
 #
