--- a/host/kernel/lts2019-yocto/x86_64_defconfig
+++ b/host/kernel/lts2019-yocto/x86_64_defconfig
@@ -312,7 +312,6 @@ CONFIG_X86_NUMACHIP=y
 # CONFIG_X86_UV is not set
 # CONFIG_X86_GOLDFISH is not set
 # CONFIG_X86_INTEL_MID is not set
-# CONFIG_X86_TCC_PTCM is not set
 CONFIG_X86_INTEL_LPSS=y
 CONFIG_X86_AMD_PLATFORM_DEVICE=y
 CONFIG_IOSF_MBI=y
@@ -5354,15 +5353,6 @@ CONFIG_VIDEO_V4L2_I2C=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 # CONFIG_VIDEO_PCI_SKELETON is not set
-# CONFIG_VIDEO_INTEL_KMB_FLASH is not set
-# CONFIG_VIDEO_INTEL_KMB_IMX327 is not set
-# CONFIG_VIDEO_INTEL_KMB_IMX334 is not set
-# CONFIG_VIDEO_INTEL_KMB_IMX335 is not set
-# CONFIG_VIDEO_INTEL_KMB_IMX412 is not set
-# CONFIG_VIDEO_INTEL_KMB_LENS is not set
-# CONFIG_VIDEO_INTEL_KMB_OV9282 is not set
-# CONFIG_VIDEO_INTEL_KMB_SENSOR is not set
-# CONFIG_VPUSMM is not set
 CONFIG_VIDEO_TUNER=m
 CONFIG_V4L2_MEM2MEM_DEV=m
 CONFIG_V4L2_FLASH_LED_CLASS=m
@@ -6746,7 +6736,7 @@ CONFIG_SND_SOC_INTEL_SKL_HDA_DSP_GENERIC_MACH=m
 CONFIG_SND_SOC_INTEL_TGL_RT1308_MACH=m
 CONFIG_SND_SOC_INTEL_SOF_RT5682_MACH=m
 CONFIG_SND_SOC_INTEL_CML_LP_DA7219_MAX98357A_MACH=m
-CONFIG_SND_SOC_INTEL_EHL_RT5660_MACH=m
+# CONFIG_SND_SOC_INTEL_EHL_RT5660_MACH is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_PCI=m
@@ -6756,6 +6746,7 @@ CONFIG_SND_SOC_SOF_OPTIONS=m
 # CONFIG_SND_SOC_SOF_STRICT_ABI_CHECKS is not set
 # CONFIG_SND_SOC_SOF_DEBUG is not set
 CONFIG_SND_SOC_SOF=m
+CONFIG_SND_SOC_SOF_PROBE_WORK_QUEUE=y
 CONFIG_SND_SOC_SOF_INTEL_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_INTEL_ACPI=m
 CONFIG_SND_SOC_SOF_INTEL_PCI=m
@@ -6781,9 +6772,11 @@ CONFIG_SND_SOC_SOF_TIGERLAKE=m
 CONFIG_SND_SOC_SOF_ELKHARTLAKE_SUPPORT=y
 CONFIG_SND_SOC_SOF_ELKHARTLAKE=m
 CONFIG_SND_SOC_SOF_HDA_COMMON=m
-# CONFIG_SND_SOC_SOF_HDA_LINK is not set
+CONFIG_SND_SOC_SOF_HDA_LINK=y
+CONFIG_SND_SOC_SOF_HDA_AUDIO_CODEC=y
 # CONFIG_SND_SOC_SOF_HDA_ALWAYS_ENABLE_DMI_L1 is not set
 CONFIG_SND_SOC_SOF_HDA_LINK_BASELINE=m
+CONFIG_SND_SOC_SOF_HDA=m
 CONFIG_SND_SOC_SOF_XTENSA=m
 
 #
@@ -8471,7 +8464,6 @@ CONFIG_COMMON_CLK_S2MPS11=m
 CONFIG_CLK_TWL6040=m
 CONFIG_COMMON_CLK_PALMAS=m
 CONFIG_COMMON_CLK_PWM=m
-# CONFIG_COMMON_CLK_CDCUN1208 is not set
 # end of Common Clock Framework
 
 CONFIG_HWSPINLOCK=y
@@ -9713,7 +9705,11 @@ CONFIG_IMA_TRUSTED_KEYRING=y
 # CONFIG_IMA_KEYRINGS_PERMIT_SIGNED_BY_BUILTIN_OR_SECONDARY is not set
 # CONFIG_IMA_BLACKLIST_KEYRING is not set
 # CONFIG_IMA_LOAD_X509 is not set
-# CONFIG_EVM is not set
+CONFIG_EVM=y
+CONFIG_EVM_ATTR_FSUUID=y
+CONFIG_EVM_EXTRA_SMACK_XATTRS=y
+CONFIG_EVM_ADD_XATTRS=y
+# CONFIG_EVM_LOAD_X509 is not set
 # CONFIG_DEFAULT_SECURITY_SELINUX is not set
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 CONFIG_DEFAULT_SECURITY_APPARMOR=y
@@ -9953,9 +9949,6 @@ CONFIG_CHELSIO_IPSEC_INLINE=y
 CONFIG_CRYPTO_DEV_CHELSIO_TLS=m
 CONFIG_CRYPTO_DEV_VIRTIO=m
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
-# CONFIG_CRYPTO_DEV_KEEMBAY_OCS_ECC is not set
-# CONFIG_CRYPTO_DEV_KEEMBAY_OCS_HCU is not set
-# CONFIG_CRYPTO_DEV_KEEMBAY_OCS_SYM_CIPHER is not set
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_ASYMMETRIC_TPM_KEY_SUBTYPE=m
